[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/hitbox.gd" type="Script" id=1]

[sub_resource type="StandardMaterial3D" id=2]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.984314, 0.862745, 0.152941, 0.243137 )

[sub_resource type="SphereMesh" id=1]
material = SubResource( 2 )
radius = 0.5
height = 0.5
radial_segments = 24
rings = 12
is_hemisphere = true

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.5
bottom_radius = 0.5
height = 1.0
radial_segments = 24
rings = 0

[node name="Node3D" type="Node3D"]
script = ExtResource( 1 )

[node name="HitboxHead" type="MeshInstance3D" parent="."]
mesh = SubResource( 1 )

[node name="HitboxTail" type="MeshInstance3D" parent="."]
mesh = SubResource( 1 )

[node name="HitboxMiddle" type="MeshInstance3D" parent="."]
mesh = SubResource( 3 )
